ui-ux: Fix the navbar top spacing issue

--- a/css/app.sass
+++ b/css/app.sass
@@ -185,7 +185,7 @@ header
 			width: 100%
 			position: fixed
 			background: #fefefe
-			top: 86px
+			top: 85px
 			left: -100%
 			transition: all 300ms ease
 
